Test commit to add lines to Jupyter notebook

--- a/DS Stats Brushup Exercises (Day 1).ipynb
+++ b/DS Stats Brushup Exercises (Day 1).ipynb
@@ -59,6 +59,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Hello Github?\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello Github?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a markdown cell, with some Latex:\n",
+    "$x^3 - 5x^2$"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
