Added landing page notebook

--- a/DS Stats Brushup Exercises (Day 1).ipynb
+++ b/DS Stats Brushup Exercises (Day 1).ipynb
@@ -83,6 +83,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "More on Copulas, from a mathematics perspective [ https://www.stat.ncsu.edu/people/bloomfield/courses/st810j/slides/copula.pdf ]\n",
+    "Plotting Copulas in Python (this notebook is using an R kernel instead)\n",
+    "[ https://twiecki.io/blog/2018/05/03/copulas/]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
