--- a/Landing Page Notebook.ipynb
+++ b/Landing Page Notebook.ipynb
@@ -54,6 +54,20 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Mathematics\n",
+    "Useful links:\n",
+    "* Stack Exchange [ https://math.stackexchange.com/ ] is a message board that is a great resource for finding the answers for maths problems\n",
+    "* Wikipedia [ https://en.wikipedia.org ] is great for maths\n",
+    "* Wolfram Alpha [ https://www.wolframalpha.com/ ]. Search engine for mathematic concepts. (Uses Mathematica and Wolfram language)\n",
+    "* Mathworld [ http://mathworld.wolfram.com/ ]. Encyclopaedia of mathematics, good additional resource beyond Wikipedia.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
