Updates to exercise notebooks

--- a/DS Stats Brushup Exercises (Day 2).ipynb
+++ b/DS Stats Brushup Exercises (Day 2).ipynb
@@ -6,11 +6,34 @@
    "source": [
     "1. Show that:\n",
     "$$\\require{cancel}\\begin{align*}\n",
-    "\\mathbb{E}[(X-c)^2 &\\geq \\mathbb{E}[(X- \\mathbb{E}[X])^2] \\\\\n",
-    "\\cancel{\\mathbb{E}[X^2]} + c^2 - 2c \\mathbb{E}[X] &\\geq \\cancel{\\mathbb{E}[X^2]} - \\mathbb{E}[X]^2 \\\\\n",
+    "\\mathbb{E}[(X-c)^2] &\\geq \\mathbb{E}[(X- \\mathbb{E}[X])^2] \\\\\n",
+    "\\cancel{\\mathbb{E}[X^2]} + c^2 - 2c \\mathbb{E}[X] &\\geq \\cancel{\\mathbb{E}[X^2]} - \\mathbb{E}[X]^2 &&\\text{Re-expressing the variance}\\\\\n",
     "c^2 + \\mathbb{E}[X]^2 - 2c \\mathbb{E}[X] &\\geq 0 \\\\\n",
     "(c - \\mathbb{E}[X])^2 &\\geq 0 \\tag*{$\\blacksquare$}\n",
     "\\end{align*} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Corrections:\n",
+    "$$\\require{cancel}\\begin{align*}\n",
+    "    &= \\mathbb{E}[(X - \\mathbb{E}[X] + \\mathbb{E}[X] - c)^2] \\\\\n",
+    "    &= \\mathbb{E}[(X-  \\mathbb{E}[X]) + (\\mathbb{E}[X] - c)^2 + 2(\\mathbb{E}[X]-c)\\underbrace{\\mathbb{E}[X - \\mathbb{E}[X]]}_0 \\\\\n",
+    "    \\implies \\mathbb{E}[(X-c)^2] &\\geq \\mathbb{E}[(X- \\mathbb{E}[X])^2]\n",
+    "\\end{align*}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\require{cancel}\\begin{align*}\n",
+    "    \\mathbb{E}[(Y - f(X))^2] \\geq \\mathbb{E}[(Y - \\mathbb{E}[Y|X])^2] \\\\\n",
+    "    x \\to \\mathbb{E}[Y|X = x] \\\\\n",
+    "    f(x^*) = \\sum_{k=1}^{m} \\phi_k(x) \\theta_k\n",
+    "\\end{align*}$$"
    ]
   },
   {
@@ -35,7 +58,7 @@
    "source": [
     "3. Show that\n",
     "$$\\require{cancel}\\begin{align*}\n",
-    "|\\text{Corr}(X,Y)| &\\leq 1$ \\\\\n",
+    "|\\text{Corr}(X,Y)| &\\leq 1 \\\\\n",
     "|\\mathbb{E}[WZ]| &\\leq \\mathbb{E}[|WZ|]\n",
     "\\end{align*} $$\n",
     "because of the convexity of the absolute value function, we can use Jensen's inequality. Thus, using the (Cauchy-)Schwartz inequality:\n",
@@ -53,7 +76,38 @@
     "Question of whether it is acceptable to define:\n",
     "$Z = X \\times Y$ and use Jensen's inequality\n",
     "\n",
-    "Thoughts: If you know that $g(x)$ is convex, then you can use Jensen's inequality, but if you have $g(h(x))$ where $h(x)$ is unknown, can you use Jensen's inequality?\n"
+    "Thoughts: If you know that $g(x)$ is convex, then you can use Jensen's inequality, but if you have $g(h(x))$ where $h(x)$ is unknown, can you use Jensen's inequality?\n",
+    "\n",
+    "To check this, look at the derivatives, which will require the chain rule\n",
+    "$$\\begin{align*}\n",
+    "    f(g(x))\n",
+    "\\end{align*} $$\n",
+    "This suggests that the derivative of a convex function is convex, but that other combinations may yield other results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\require{cancel}\\begin{align*}\n",
+    "    | \\text{Cov}(X,Y) | &= \\frac{| \\mathbb{E}[(X - \\mu_X) (Y - \\mu_Y)]|}{\\sqrt{\\mathbb{E}[(X - \\mu_X)]^2 \\mathbb{E}[(Y - \\mu_Y)]^2}} \\\\\n",
+    "    & \\leq \\frac{\\mathbb{E}[|(X - \\mu_X) (Y - \\mu_Y)|]}{\\sqrt{\\mathbb{E}[(X - \\mu_X)]^2 \\mathbb{E}[(Y - \\mu_Y)]^2}}\\\\\n",
+    "    & \\leq \\sqrt{\\mathbb{E}[(X - \\mu_X)]^2 \\mathbb{E}[(Y - \\mu_Y)]^2} && \\text{By CS}\n",
+    "\\end{align*} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Proving the CS inequality:\n",
+    "$$\\require{cancel}\\begin{align*}\n",
+    "    g(t) &= \\mathbb{E}[(X+tY)^2] \\\\\n",
+    "    &= \\mathbb{E}[X^2] + \\mathbb{E}[Y^2] + 2 \\mathbb{E}[XY] \\\\\n",
+    "    \\implies b^2 - 4ac &= (2\\mathbb{E}[XY])^2 - 4 \\mathbb{E}[Y^2]\\mathbb{E}[X^2]\\\\\n",
+    "    &= 4 (\\mathbb{E}[XY]^2 - \\mathbb{E}[Y^2]\\mathbb{E}[X^2]) \\\\\n",
+    "    \\implies \\mathbb{E}[XY] & \\leq \\sqrt{\\mathbb{E}[X^2]\\mathbb{E}[Y^2]} && \\text{For discriminant, } b^2 - 4ac \\leq 0\n",
+    "\\end{align*} $$"
    ]
   },
   {
@@ -79,6 +133,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Corrections\n",
+    "\n",
+    "$$\\require{cancel}\\begin{align*}\n",
+    "\\mathbb{P}[|X - \\mathbb{E}[X] \\geq c] \\leq \\frac{\\text{Var}(X)}{c^2} && c > 0 \\\\\n",
+    "\\mathbb{P}[|X - \\mathbb{E}[X] \\geq c] \n",
+    "\\end{align*} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Compare the predictions from a Normal distribution with those from the Chebyshev inequality for $\\alpha = 0.05$:\n",
     "\n",
     "Normal:\n",
@@ -96,6 +162,15 @@
     "    \\implies c &= \\sqrt{\\frac{\\text{Var}(X)}{0.05}} \\\\\n",
     "    &= \\sqrt{20}\\sqrt{\\text{Var}(X)} \\\\\n",
     "    &\\approx \\mu \\pm 4.47 \\sqrt{v} \n",
+    "\\end{align*} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ \\begin{align*}\n",
+    "    \\mathbb{P}[X \\in \n",
     "\\end{align*} $$"
    ]
   },
