Updated with exercises up to day 4

--- a/DS Stats Brushup Exercises (Day 3).ipynb
+++ b/DS Stats Brushup Exercises (Day 3).ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1.\n",
     "$$ \\begin{align*}\n",
     "    M_X(u) &= \\mathbb{E}[e^{uX}] \\\\\n",
@@ -53,13 +60,20 @@
    "source": [
     "3. Show that the sum of two Gamma RVs has a Gamma distribution:\n",
     "$$ \\begin{align*}\n",
-    "    A_1 \\sim \\text{Ga}(a_1, b) \\\\\n",
-    "    A_2 \\sim \\text{Ga}(a_2, b) \\\\\n",
-    "    Z = A_1 + A_2 \\sim \\text{Ga}(a_1 + a_2, b) \\\\\n",
+    "    A_1 &\\sim \\text{Ga}(a_1, b) \\\\\n",
+    "    A_2 &\\sim \\text{Ga}(a_2, b) \\\\\n",
+    "    Z = A_1 + A_2 &\\sim \\text{Ga}(a_1 + a_2, b) \\\\\n",
     "\\end{align*} $$\n",
     "Use the Moment Generating Function (MGF):\n",
     "$$ \\begin{align*}\n",
-    "    M_X(u) = \\left( \\frac{1}{1-bu}\\right)^{a_1} && \\text{where } u < \\frac{1}{b}\n",
+    "    M_X(u) &= \\left( \\frac{1}{1-bu}\\right)^{a_1} && \\text{where } u < \\frac{1}{b} \\\\\n",
+    "    M_Z(u) &= M_{A_1 + A_2}(u) \\\\\n",
+    "    &= \\mathbb{E}[e^{u(A_1 + A_2)}] \\\\\n",
+    "    &= \\mathbb{E}[e^{uA_1 + uA_2)}] \\\\\n",
+    "    &= \\mathbb{E}[e^{uA_1}]\\mathbb{E}[e^{uA_2}] \\\\\n",
+    "    &= \\left( \\frac{1}{1-bu} \\right)^{a_1} \\left( \\frac{1}{1-bu} \\right)^{a_2} \\\\\n",
+    "    &= \\left( \\frac{1}{1-bu} \\right)^{a_1 + a_2} \\\\\n",
+    "    \\implies Z & \\sim \\text{Ga}(a_1 + a_2, b)\n",
     "\\end{align*} $$"
    ]
   },
@@ -84,28 +98,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Copy buffer\n",
-    "\n",
-    "$$\\require{cancel} \\begin{align*} \\end{align*} $$\n",
-    "\n",
-    "$$ \\begin{align*} \\end{align*} $$\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "4. Show that the covariance matrix is PSD.\n",
     "$$ \\begin{align*}\n",
-    "    \\underset{d \\times d}{\\Sigma} = \\mathbb{E}[(X - \\mathbb{E}[X])(X - \\mathbb{E}[X])^T] \\\\\n",
-    "    \\underset{1 \\times d}{\\boldsymbol{u}^T} \\underset{d \\times d}{\\Sigma} \\underset{d \\times 1}{\\boldsymbol{u}} = \\underset{1 \\times d}{\\boldsymbol{u}^T \\mathbb{E}[(X - \\mathbb{E}[X])(X - \\mathbb{E}[X])^T]\\\\\n",
-    "\\end{align*} $$"
+    "    \\underset{d \\times d}{\\Sigma} &= \\mathbb{E}[(X - \\mathbb{E}[X])(X - \\mathbb{E}[X])^T] \\\\\n",
+    "    \\underset{1 \\times d}{\\boldsymbol{u}^T} \\underset{d \\times d}{\\Sigma} \\underset{d \\times 1}{\\boldsymbol{u}} &= \\underset{1 \\times d}{\\boldsymbol{u}^T} \\mathbb{E}[\\underset{d \\times 1}{(X - \\mathbb{E}[X])}\\underset{1 \\times d}{(X - \\mathbb{E}[X])}^T] \\underset{d \\times 1}{\\boldsymbol{u}} \\\\\n",
+    "    &= \\mathbb{E}[\\boldsymbol{u}^T(X - \\mathbb{E}[X])(X - \\mathbb{E}[X])^T\\boldsymbol{u}] \\\\\n",
+    "    &= \\mathbb{E}[c^2] \\geq 0\n",
+    "\\end{align*} $$\n",
+    " \n",
+    "    \n",
+    "     "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Correction :\n",
     "$$ \\begin{align*}\n",
     "X_1, \\ldots, X_d \\\\\n",
     "\\Sigma_{ij} &= \\text{Cov}(X_i,X+j) \\\\\n",
@@ -118,13 +127,6 @@
     "    \\text{Var}(A \\boldsymbol{X}) &= A \\text{Var}(\\boldsymbol{X})A^T\n",
     "\\end{align*} $$"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
