--- a/Landing Page Notebook.ipynb
+++ b/Landing Page Notebook.ipynb
@@ -33,7 +33,8 @@
     "\n",
     "### Useful links:\n",
     "* Markdown Cheatsheet [ https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet], which tells you how to do the typography stuff\n",
-    "* MathJax basics [ http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference ] \n"
+    "* MathJax basics [ http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference ] \n",
+    "* Online notebook renderer [ http://nbviewer.jupyter.org/ ]\n"
    ]
   },
   {
