--- a/DS Stats Brushup Exercises (Day 2).ipynb
+++ b/DS Stats Brushup Exercises (Day 2).ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Show that:\n",
     "$$\\require{cancel}\\begin{align*}\n",
     "\\mathbb{E}[(X-c)^2] &\\geq \\mathbb{E}[(X- \\mathbb{E}[X])^2] \\\\\n",
@@ -89,6 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Corrections\n",
     "$$\\require{cancel}\\begin{align*}\n",
     "    | \\text{Cov}(X,Y) | &= \\frac{| \\mathbb{E}[(X - \\mu_X) (Y - \\mu_Y)]|}{\\sqrt{\\mathbb{E}[(X - \\mu_X)]^2 \\mathbb{E}[(Y - \\mu_Y)]^2}} \\\\\n",
     "    & \\leq \\frac{\\mathbb{E}[|(X - \\mu_X) (Y - \\mu_Y)|]}{\\sqrt{\\mathbb{E}[(X - \\mu_X)]^2 \\mathbb{E}[(Y - \\mu_Y)]^2}}\\\\\n",
@@ -144,6 +152,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "6. Compare the predictions from a Normal distribution with those from the Chebyshev inequality for $\\alpha = 0.05$:\n",
     "\n",
@@ -169,9 +182,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "7. If:\n",
+    "$$\\begin{align*}\n",
+    "  \\mathbb{E}[e^{\\theta X}] < + \\infty \\quad \\exists \\quad \\theta  \n",
+    "\\end{align*} $$\n",
+    "Prove:\n",
     "$$ \\begin{align*}\n",
-    "    \\mathbb{P}[X \\in \n",
+    "    \\mathbb{P}[x \\geq c] &\\leq e^{-\\theta c} \\mathbb{E}[e^{\\theta X}] \\\\\n",
+    "    g(X) &= e^{\\theta X} \\\\\n",
+    "    \\mathbb{P}[x \\geq c] &\\leq \\frac{\\mathbb{E}[e^{\\theta X}]}{e^{\\theta X}} && \\text{Using the Markov inequality}\\\\\n",
+    "    &= e^{-\\theta c} \\mathbb{E}[e^\\theta X]\n",
     "\\end{align*} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Show that:\n",
+    "$$ \\begin{align*}\n",
+    "    |\\mathbb{E}[x]| & \\leq |\\mathbb{E}[x]| \\\\\n",
+    "    g(x) &= |x| && \\text{This function is convex}\n",
+    "\\end{align*} $$\n",
+    "Thus, we can invoke Jensen's inequality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "9. Show that:\n",
+    "$$ \\begin{align*}\n",
+    "    \\mathbb{E}[x]^2 & \\leq \\mathbb{E}[x^2] \\\\\n",
+    "    g(x) &= |x| && \\text{This function is convex}\n",
+    "\\end{align*} $$\n",
+    "Thus, we can invoke Jensen's inequality."
    ]
   },
   {
