--- a/DS_Stats_Brushup_Exercises_Day02.ipynb
+++ b/DS_Stats_Brushup_Exercises_Day02.ipynb
@@ -152,11 +152,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "6. Compare the predictions from a Normal distribution with those from the Chebyshev inequality for $\\alpha = 0.05$:\n",
     "\n",
@@ -217,6 +212,13 @@
     "    g(x) &= |x| && \\text{This function is convex}\n",
     "\\end{align*} $$\n",
     "Thus, we can invoke Jensen's inequality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Conditional expectations question (not done)."
    ]
   },
   {
