Added a notebook of distributions

--- a/Landing Page Notebook.ipynb
+++ b/Landing Page Notebook.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "### Useful links:\n",
     "* Latex tutorials on Overleaf [ https://www.overleaf.com/learn/latex/Tutorials ]\n",
-    "* Detextify, [ http://detexify.kirelabs.org/classify.html ] which will let you draw the symbol you want and get the TeX/LaTeX name"
+    "* Detextify, [ http://detexify.kirelabs.org/classify.html ] which will let you draw the symbol you want and get the TeX/LaTeX name\n",
+    "* Mathpix, [ https://mathpix.com/ ]. App that will take a screenshot of an equation and turn it into Latex code. It used to be free, but now it seems they charge. Anyway you can get 50 snips a month for free still."
    ]
   },
   {
