--- a/Landing Page Notebook.ipynb
+++ b/Landing Page Notebook.ipynb
@@ -35,7 +35,8 @@
     "### Useful links:\n",
     "* Markdown Cheatsheet [ https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet], which tells you how to do the typography stuff\n",
     "* MathJax basics [ http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference ] \n",
-    "* Online notebook renderer [ http://nbviewer.jupyter.org/ ]\n"
+    "* Online notebook renderer [ http://nbviewer.jupyter.org/ ]\n",
+    "* Running Python and R in the same notebook [ https://stackoverflow.com/questions/39008069/r-and-python-in-one-jupyter-notebook/39008107 ]\n"
    ]
   },
   {
@@ -63,6 +64,13 @@
     "* Wikipedia [ https://en.wikipedia.org ] is great for maths\n",
     "* Wolfram Alpha [ https://www.wolframalpha.com/ ]. Search engine for mathematic concepts. (Uses Mathematica and Wolfram language)\n",
     "* Mathworld [ http://mathworld.wolfram.com/ ]. Encyclopaedia of mathematics, good additional resource beyond Wikipedia.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## R\n"
    ]
   }
  ],
